versions/0.23.0/_sources/refs/_aws-cdk_aws-cloudwatch.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"9/5daxftmPUzUUhRoXEWVpXHEbkq+4ZkTgSoVOQVHtk="}

@aws-cdk/aws-cloudwatch
=======================

.. mdinclude:: ./__aws-cdk_aws-cloudwatch.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.CloudWatch/0.23.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.CloudWatch" Version="0.23.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.CloudWatch --version 0.23.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.CloudWatch" version="0.23.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/cloudwatch/0.23.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:cloudwatch:jar:0.23.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="cloudwatch" rev="0.23.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>cloudwatch</artifactId>
           <version>0.23.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:cloudwatch:0.23.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='cloudwatch', version='0.23.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-cloudwatch/v/0.23.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-cloudwatch@0.23.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-cloudwatch": "^0.23.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-cloudwatch@0.23.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-cloudwatch/v/0.23.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-cloudwatch@0.23.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-cloudwatch": "^0.23.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-cloudwatch@0.23.0



.. py:module:: @aws-cdk/aws-cloudwatch

Alarm
^^^^^

.. py:class:: Alarm(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.Alarm;

      .. code-tab:: javascript

         const { Alarm } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { Alarm } from '@aws-cdk/aws-cloudwatch';



   An alarm on a CloudWatch metric



   :extends: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param scope: 
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-cloudwatch.AlarmProps`\ 

   .. py:method:: onAlarm(*actions)

      Trigger this action if the alarm fires

      

      Typically the ARN of an SNS topic or ARN of an AutoScaling policy.



      :param \*actions: 
      :type \*actions: :py:class:`~@aws-cdk/aws-cloudwatch.IAlarmAction`\ 


   .. py:method:: onInsufficientData(*actions)

      Trigger this action if there is insufficient data to evaluate the alarm

      

      Typically the ARN of an SNS topic or ARN of an AutoScaling policy.



      :param \*actions: 
      :type \*actions: :py:class:`~@aws-cdk/aws-cloudwatch.IAlarmAction`\ 


   .. py:method:: onOk(*actions)

      Trigger this action if the alarm returns from breaching state into ok state

      

      Typically the ARN of an SNS topic or ARN of an AutoScaling policy.



      :param \*actions: 
      :type \*actions: :py:class:`~@aws-cdk/aws-cloudwatch.IAlarmAction`\ 


   .. py:method:: toAnnotation() -> @aws-cdk/aws-cloudwatch.HorizontalAnnotation

      Turn this alarm into a horizontal annotation

      

      This is useful if you want to represent an Alarm in a non-AlarmWidget.

      An `AlarmWidget` can directly show an alarm, but it can only show a

      single alarm and no other metrics. Instead, you can convert the alarm to

      a HorizontalAnnotation and add it as an annotation to another graph.

      

      This might be useful if:

      

      - You want to show multiple alarms inside a single graph, for example if

         you have both a "small margin/long period" alarm as well as a

         "large margin/short period" alarm.

      

      - You want to show an Alarm line in a graph with multiple metrics in it.



      :rtype: :py:class:`~@aws-cdk/aws-cloudwatch.HorizontalAnnotation`\ 


   .. py:attribute:: alarmArn

      ARN of this alarm



      :type: string *(readonly)*


   .. py:attribute:: alarmName

      Name of this alarm.



      :type: string *(readonly)*


   .. py:attribute:: metric

      The metric object this alarm was based on



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.Metric`\  *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


AlarmMetricJson (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: AlarmMetricJson

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.AlarmMetricJson;

      .. code-tab:: javascript

         // AlarmMetricJson is an interface

      .. code-tab:: typescript

         import { AlarmMetricJson } from '@aws-cdk/aws-cloudwatch';



   Properties used to construct the Metric identifying part of an Alarm





   .. py:attribute:: metricName

      Name of the metric



      :type: string


   .. py:attribute:: namespace

      Namespace of the metric



      :type: string


   .. py:attribute:: period

      How many seconds to aggregate over



      :type: number


   .. py:attribute:: dimensions

      The dimensions to apply to the alarm



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.Dimension`\ [] *(optional)*


   .. py:attribute:: extendedStatistic

      Percentile aggregation function to use



      :type: string *(optional)*


   .. py:attribute:: statistic

      Simple aggregation function to use



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.Statistic`\  *(optional)*


   .. py:attribute:: unit

      The unit of the alarm



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.Unit`\  *(optional)*


AlarmProps (interface)
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: AlarmProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.AlarmProps;

      .. code-tab:: javascript

         // AlarmProps is an interface

      .. code-tab:: typescript

         import { AlarmProps } from '@aws-cdk/aws-cloudwatch';



   Properties for Alarms



   :extends: :py:class:`~@aws-cdk/aws-cloudwatch.MetricAarmProps`\ 


   .. py:attribute:: metric

      The metric to add the alarm on

      

      Metric objects can be obtained from most resources, or you can construct

      custom Metric objects by instantiating one.



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:attribute:: evaluationPeriods

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricAarmProps <@aws-cdk/aws-cloudwatch.MetricAarmProps.evaluationPeriods>`

      The number of periods over which data is compared to the specified threshold.



      :type: number


   .. py:attribute:: threshold

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricAarmProps <@aws-cdk/aws-cloudwatch.MetricAarmProps.threshold>`

      The value against which the specified statistic is compared.



      :type: number


   .. py:attribute:: actionsEnabled

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricAarmProps <@aws-cdk/aws-cloudwatch.MetricAarmProps.actionsEnabled>`

      Whether the actions for this alarm are enabled



      :type: boolean *(optional)*
      :default: true


   .. py:attribute:: alarmDescription

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricAarmProps <@aws-cdk/aws-cloudwatch.MetricAarmProps.alarmDescription>`

      Description for the alarm



      :type: string *(optional)*
      :default: No description


   .. py:attribute:: alarmName

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricAarmProps <@aws-cdk/aws-cloudwatch.MetricAarmProps.alarmName>`

      Name of the alarm



      :type: string *(optional)*
      :default: Automatically generated name


   .. py:attribute:: comparisonOperator

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricAarmProps <@aws-cdk/aws-cloudwatch.MetricAarmProps.comparisonOperator>`

      Comparison to use to check if metric is breaching



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.ComparisonOperator`\  *(optional)*
      :default: GreaterThanOrEqualToThreshold


   .. py:attribute:: datapointsToAlarm

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricAarmProps <@aws-cdk/aws-cloudwatch.MetricAarmProps.datapointsToAlarm>`

      The number of datapoints that must be breaching to trigger the alarm. This is used only if you are setting an "M

      out of N" alarm. In that case, this value is the M. For more information, see Evaluating an Alarm in the Amazon

      CloudWatch User Guide.



      :type: number *(optional)*
      :default: ``evaluationPeriods``


   .. py:attribute:: evaluateLowSampleCountPercentile

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricAarmProps <@aws-cdk/aws-cloudwatch.MetricAarmProps.evaluateLowSampleCountPercentile>`

      Specifies whether to evaluate the data and potentially change the alarm state if there are too few data points to be statistically significant.

      

      Used only for alarms that are based on percentiles.



      :type: string *(optional)*


   .. py:attribute:: periodSec

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricAarmProps <@aws-cdk/aws-cloudwatch.MetricAarmProps.periodSec>`

      The period over which the specified statistic is applied.

      

      Specify time in seconds, in multiples of 60.



      :type: number *(optional)*
      :default: 300


   .. py:attribute:: statistic

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricAarmProps <@aws-cdk/aws-cloudwatch.MetricAarmProps.statistic>`

      What function to use for aggregating.

      

      Can be one of the following:

      

      - "Minimum" | "min"

      - "Maximum" | "max"

      - "Average" | "avg"

      - "Sum" | "sum"

      - "SampleCount | "n"

      - "pNN.NN"



      :type: string *(optional)*
      :default: Average


   .. py:attribute:: treatMissingData

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricAarmProps <@aws-cdk/aws-cloudwatch.MetricAarmProps.treatMissingData>`

      Sets how this alarm is to handle missing data points.



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.TreatMissingData`\  *(optional)*
      :default: TreatMissingData.Missing


AlarmWidget
^^^^^^^^^^^

.. py:class:: AlarmWidget(props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.AlarmWidget;

      .. code-tab:: javascript

         const { AlarmWidget } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { AlarmWidget } from '@aws-cdk/aws-cloudwatch';



   Display the metric associated with an alarm, including the alarm line



   :extends: :py:class:`~@aws-cdk/aws-cloudwatch.ConcreteWidget`\ 
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-cloudwatch.AlarmWidgetProps`\ 

   .. py:method:: toJson() -> any[]

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.ConcreteWidget.toJson`

      Return the widget JSON for use in the dashboard



      :rtype: any[]


   .. py:method:: position(x, y)

      *Inherited from* :py:meth:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.position>`

      Place the widget at a given position



      :param x: 
      :type x: number
      :param y: 
      :type y: number


   .. py:attribute:: height

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.height>`

      The amount of vertical grid units the widget will take up



      :type: number *(readonly)*


   .. py:attribute:: width

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.width>`

      The amount of horizontal grid units the widget will take up



      :type: number *(readonly)*


   .. py:attribute:: x

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.x>`

      *Protected property*

      :type: number *(optional)*


   .. py:attribute:: y

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.y>`

      *Protected property*

      :type: number *(optional)*


AlarmWidgetProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: AlarmWidgetProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.AlarmWidgetProps;

      .. code-tab:: javascript

         // AlarmWidgetProps is an interface

      .. code-tab:: typescript

         import { AlarmWidgetProps } from '@aws-cdk/aws-cloudwatch';



   Properties for an AlarmWidget



   :extends: :py:class:`~@aws-cdk/aws-cloudwatch.MetricWidgetProps`\ 


   .. py:attribute:: alarm

      The alarm to show



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.Alarm`\ 


   .. py:attribute:: leftAxisRange

      Range of left Y axis



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.YAxisRange`\  *(optional)*
      :default: 0..automatic


   .. py:attribute:: height

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricWidgetProps <@aws-cdk/aws-cloudwatch.MetricWidgetProps.height>`

      Height of the widget



      :type: number *(optional)*
      :default: Depends on the type of widget


   .. py:attribute:: region

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricWidgetProps <@aws-cdk/aws-cloudwatch.MetricWidgetProps.region>`

      The region the metrics of this graph should be taken from



      :type: string *(optional)*
      :default: Current region


   .. py:attribute:: title

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricWidgetProps <@aws-cdk/aws-cloudwatch.MetricWidgetProps.title>`

      Title for the graph



      :type: string *(optional)*


   .. py:attribute:: width

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricWidgetProps <@aws-cdk/aws-cloudwatch.MetricWidgetProps.width>`

      Width of the widget, in a grid of 24 units wide



      :type: number *(optional)*
      :default: 6


CfnAlarm
^^^^^^^^

.. py:class:: CfnAlarm(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.CfnAlarm;

      .. code-tab:: javascript

         const { CfnAlarm } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { CfnAlarm } from '@aws-cdk/aws-cloudwatch';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-cloudwatch.CfnAlarmProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: alarmArn

      :type: string *(readonly)*


   .. py:attribute:: alarmName

      :type: string *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-cloudwatch.CfnAlarmProps`\  *(readonly)*

   .. py:class:: DimensionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.CloudWatch;

         .. code-tab:: java

            import software.amazon.awscdk.services.cloudwatch.CfnAlarm.DimensionProperty;

         .. code-tab:: javascript

            // CfnAlarm.DimensionProperty is an interface

         .. code-tab:: typescript

            import { CfnAlarm.DimensionProperty } from '@aws-cdk/aws-cloudwatch';





      .. py:attribute:: name

         ``CfnAlarm.DimensionProperty.Name``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-dimension.html#cfn-cloudwatch-alarm-dimension-name


         :type: string


      .. py:attribute:: value

         ``CfnAlarm.DimensionProperty.Value``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-dimension.html#cfn-cloudwatch-alarm-dimension-value


         :type: string



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependsOn>`

      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.Resource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnAlarmProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnAlarmProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.CfnAlarmProps;

      .. code-tab:: javascript

         // CfnAlarmProps is an interface

      .. code-tab:: typescript

         import { CfnAlarmProps } from '@aws-cdk/aws-cloudwatch';





   .. py:attribute:: comparisonOperator

      ``AWS::CloudWatch::Alarm.ComparisonOperator``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-comparisonoperator


      :type: string


   .. py:attribute:: evaluationPeriods

      ``AWS::CloudWatch::Alarm.EvaluationPeriods``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-evaluationperiods


      :type: number or :py:class:`@aws-cdk/cdk.Token`\ 


   .. py:attribute:: threshold

      ``AWS::CloudWatch::Alarm.Threshold``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-threshold


      :type: number or :py:class:`@aws-cdk/cdk.Token`\ 


   .. py:attribute:: actionsEnabled

      ``AWS::CloudWatch::Alarm.ActionsEnabled``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-actionsenabled


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


   .. py:attribute:: alarmActions

      ``AWS::CloudWatch::Alarm.AlarmActions``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-alarmactions


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (string or :py:class:`@aws-cdk/cdk.Token`\ )[] *(optional)*


   .. py:attribute:: alarmDescription

      ``AWS::CloudWatch::Alarm.AlarmDescription``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-alarmdescription


      :type: string *(optional)*


   .. py:attribute:: alarmName

      ``AWS::CloudWatch::Alarm.AlarmName``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-alarmname


      :type: string *(optional)*


   .. py:attribute:: datapointsToAlarm

      ``AWS::CloudWatch::Alarm.DatapointsToAlarm``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarm-datapointstoalarm


      :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


   .. py:attribute:: dimensions

      ``AWS::CloudWatch::Alarm.Dimensions``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-dimension


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-cloudwatch.CfnAlarm.DimensionProperty`\ )[] *(optional)*


   .. py:attribute:: evaluateLowSampleCountPercentile

      ``AWS::CloudWatch::Alarm.EvaluateLowSampleCountPercentile``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-evaluatelowsamplecountpercentile


      :type: string *(optional)*


   .. py:attribute:: extendedStatistic

      ``AWS::CloudWatch::Alarm.ExtendedStatistic``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-extendedstatistic


      :type: string *(optional)*


   .. py:attribute:: insufficientDataActions

      ``AWS::CloudWatch::Alarm.InsufficientDataActions``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-insufficientdataactions


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (string or :py:class:`@aws-cdk/cdk.Token`\ )[] *(optional)*


   .. py:attribute:: metricName

      ``AWS::CloudWatch::Alarm.MetricName``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-metricname


      :type: string *(optional)*


   .. py:attribute:: namespace

      ``AWS::CloudWatch::Alarm.Namespace``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-namespace


      :type: string *(optional)*


   .. py:attribute:: okActions

      ``AWS::CloudWatch::Alarm.OKActions``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-okactions


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (string or :py:class:`@aws-cdk/cdk.Token`\ )[] *(optional)*


   .. py:attribute:: period

      ``AWS::CloudWatch::Alarm.Period``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-period


      :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


   .. py:attribute:: statistic

      ``AWS::CloudWatch::Alarm.Statistic``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-statistic


      :type: string *(optional)*


   .. py:attribute:: treatMissingData

      ``AWS::CloudWatch::Alarm.TreatMissingData``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-treatmissingdata


      :type: string *(optional)*


   .. py:attribute:: unit

      ``AWS::CloudWatch::Alarm.Unit``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cw-alarm.html#cfn-cloudwatch-alarms-unit


      :type: string *(optional)*


CfnDashboard
^^^^^^^^^^^^

.. py:class:: CfnDashboard(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.CfnDashboard;

      .. code-tab:: javascript

         const { CfnDashboard } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { CfnDashboard } from '@aws-cdk/aws-cloudwatch';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-cloudwatch.CfnDashboardProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: dashboardName

      :type: string *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-cloudwatch.CfnDashboardProps`\  *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependsOn>`

      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.Resource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnDashboardProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnDashboardProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.CfnDashboardProps;

      .. code-tab:: javascript

         // CfnDashboardProps is an interface

      .. code-tab:: typescript

         import { CfnDashboardProps } from '@aws-cdk/aws-cloudwatch';





   .. py:attribute:: dashboardBody

      ``AWS::CloudWatch::Dashboard.DashboardBody``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cloudwatch-dashboard.html#cfn-cloudwatch-dashboard-dashboardbody


      :type: string


   .. py:attribute:: dashboardName

      ``AWS::CloudWatch::Dashboard.DashboardName``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cloudwatch-dashboard.html#cfn-cloudwatch-dashboard-dashboardname


      :type: string *(optional)*


Column
^^^^^^

.. py:class:: Column(*widgets)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.Column;

      .. code-tab:: javascript

         const { Column } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { Column } from '@aws-cdk/aws-cloudwatch';



   A widget that contains other widgets in a vertical column

   

   Widgets will be laid out next to each other



   :implements: :py:class:`~@aws-cdk/aws-cloudwatch.IWidget`\ 
   :param \*widgets: 
   :type \*widgets: :py:class:`~@aws-cdk/aws-cloudwatch.IWidget`\ 

   .. py:method:: position(x, y)

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.position`

      Place the widget at a given position



      :param x: 
      :type x: number
      :param y: 
      :type y: number


   .. py:method:: toJson() -> any[]

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.toJson`

      Return the widget JSON for use in the dashboard



      :rtype: any[]


   .. py:attribute:: height

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.height`

      The amount of vertical grid units the widget will take up



      :type: number *(readonly)*


   .. py:attribute:: width

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.width`

      The amount of horizontal grid units the widget will take up



      :type: number *(readonly)*


ComparisonOperator (enum)
^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ComparisonOperator

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.ComparisonOperator;

      .. code-tab:: javascript

         const { ComparisonOperator } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { ComparisonOperator } from '@aws-cdk/aws-cloudwatch';



   Comparison operator for evaluating alarms



   .. py:data:: GreaterThanOrEqualToThreshold

   .. py:data:: GreaterThanThreshold

   .. py:data:: LessThanThreshold

   .. py:data:: LessThanOrEqualToThreshold


ConcreteWidget
^^^^^^^^^^^^^^

.. py:class:: ConcreteWidget(width, height)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.ConcreteWidget;

      .. code-tab:: javascript

         const { ConcreteWidget } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { ConcreteWidget } from '@aws-cdk/aws-cloudwatch';



   A real CloudWatch widget that has its own fixed size and remembers its position

   

   This is in contrast to other widgets which exist for layout purposes.



   :implements: :py:class:`~@aws-cdk/aws-cloudwatch.IWidget`\ 
   :abstract: Yes
   :param width: 
   :type width: number
   :param height: 
   :type height: number

   .. py:method:: position(x, y)

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.position`

      Place the widget at a given position



      :param x: 
      :type x: number
      :param y: 
      :type y: number


   .. py:method:: toJson() -> any[]

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.toJson`

      Return the widget JSON for use in the dashboard



      :rtype: any[]
      :abstract: Yes


   .. py:attribute:: height

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.height`

      The amount of vertical grid units the widget will take up



      :type: number *(readonly)*


   .. py:attribute:: width

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.width`

      The amount of horizontal grid units the widget will take up



      :type: number *(readonly)*


   .. py:attribute:: x

      *Protected property*

      :type: number *(optional)*


   .. py:attribute:: y

      *Protected property*

      :type: number *(optional)*


Dashboard
^^^^^^^^^

.. py:class:: Dashboard(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.Dashboard;

      .. code-tab:: javascript

         const { Dashboard } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { Dashboard } from '@aws-cdk/aws-cloudwatch';



   A CloudWatch dashboard



   :extends: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param scope: 
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-cloudwatch.DashboardProps`\  *(optional)*

   .. py:method:: add(*widgets)

      Add a widget to the dashboard.

      

      Widgets given in multiple calls to add() will be laid out stacked on

      top of each other.

      

      Multiple widgets added in the same call to add() will be laid out next

      to each other.



      :param \*widgets: 
      :type \*widgets: :py:class:`~@aws-cdk/aws-cloudwatch.IWidget`\ 


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


DashboardProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: DashboardProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.DashboardProps;

      .. code-tab:: javascript

         // DashboardProps is an interface

      .. code-tab:: typescript

         import { DashboardProps } from '@aws-cdk/aws-cloudwatch';





   .. py:attribute:: dashboardName

      Name of the dashboard



      :type: string *(optional)*
      :default: Automatically generated name


Dimension (interface)
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: Dimension

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.Dimension;

      .. code-tab:: javascript

         // Dimension is an interface

      .. code-tab:: typescript

         import { Dimension } from '@aws-cdk/aws-cloudwatch';



   Metric dimension





   .. py:attribute:: name

      Name of the dimension



      :type: string


   .. py:attribute:: value

      Value of the dimension



      :type: any


GraphWidget
^^^^^^^^^^^

.. py:class:: GraphWidget(props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.GraphWidget;

      .. code-tab:: javascript

         const { GraphWidget } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { GraphWidget } from '@aws-cdk/aws-cloudwatch';



   A dashboard widget that displays metrics



   :extends: :py:class:`~@aws-cdk/aws-cloudwatch.ConcreteWidget`\ 
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-cloudwatch.GraphWidgetProps`\ 

   .. py:method:: toJson() -> any[]

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.ConcreteWidget.toJson`

      Return the widget JSON for use in the dashboard



      :rtype: any[]


   .. py:method:: position(x, y)

      *Inherited from* :py:meth:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.position>`

      Place the widget at a given position



      :param x: 
      :type x: number
      :param y: 
      :type y: number


   .. py:attribute:: height

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.height>`

      The amount of vertical grid units the widget will take up



      :type: number *(readonly)*


   .. py:attribute:: width

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.width>`

      The amount of horizontal grid units the widget will take up



      :type: number *(readonly)*


   .. py:attribute:: x

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.x>`

      *Protected property*

      :type: number *(optional)*


   .. py:attribute:: y

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.y>`

      *Protected property*

      :type: number *(optional)*


GraphWidgetProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: GraphWidgetProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.GraphWidgetProps;

      .. code-tab:: javascript

         // GraphWidgetProps is an interface

      .. code-tab:: typescript

         import { GraphWidgetProps } from '@aws-cdk/aws-cloudwatch';



   Properties for a GraphWidget



   :extends: :py:class:`~@aws-cdk/aws-cloudwatch.MetricWidgetProps`\ 


   .. py:attribute:: left

      Metrics to display on left Y axis



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.Metric`\ [] *(optional)*


   .. py:attribute:: leftAnnotations

      Annotations for the left Y axis



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.HorizontalAnnotation`\ [] *(optional)*


   .. py:attribute:: leftAxisRange

      Range of left Y axis



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.YAxisRange`\  *(optional)*
      :default: 0..automatic


   .. py:attribute:: right

      Metrics to display on right Y axis



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.Metric`\ [] *(optional)*


   .. py:attribute:: rightAnnotations

      Annotations for the right Y axis



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.HorizontalAnnotation`\ [] *(optional)*


   .. py:attribute:: rightAxisRange

      Range of right Y axis



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.YAxisRange`\  *(optional)*
      :default: 0..automatic


   .. py:attribute:: stacked

      Whether the graph should be shown as stacked lines



      :type: boolean *(optional)*


   .. py:attribute:: height

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricWidgetProps <@aws-cdk/aws-cloudwatch.MetricWidgetProps.height>`

      Height of the widget



      :type: number *(optional)*
      :default: Depends on the type of widget


   .. py:attribute:: region

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricWidgetProps <@aws-cdk/aws-cloudwatch.MetricWidgetProps.region>`

      The region the metrics of this graph should be taken from



      :type: string *(optional)*
      :default: Current region


   .. py:attribute:: title

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricWidgetProps <@aws-cdk/aws-cloudwatch.MetricWidgetProps.title>`

      Title for the graph



      :type: string *(optional)*


   .. py:attribute:: width

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricWidgetProps <@aws-cdk/aws-cloudwatch.MetricWidgetProps.width>`

      Width of the widget, in a grid of 24 units wide



      :type: number *(optional)*
      :default: 6


HorizontalAnnotation (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: HorizontalAnnotation

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.HorizontalAnnotation;

      .. code-tab:: javascript

         // HorizontalAnnotation is an interface

      .. code-tab:: typescript

         import { HorizontalAnnotation } from '@aws-cdk/aws-cloudwatch';



   Horizontal annotation to be added to a graph





   .. py:attribute:: value

      The value of the annotation



      :type: number


   .. py:attribute:: color

      Hex color code to be used for the annotation



      :type: string *(optional)*
      :default: Automatic color


   .. py:attribute:: fill

      Add shading above or below the annotation



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.Shading`\  *(optional)*
      :default: No shading


   .. py:attribute:: label

      Label for the annotation



      :type: string *(optional)*
      :default: No label


   .. py:attribute:: visible

      Whether the annotation is visible



      :type: boolean *(optional)*
      :default: true


IAlarmAction (interface)
^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: IAlarmAction

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.IAlarmAction;

      .. code-tab:: javascript

         // IAlarmAction is an interface

      .. code-tab:: typescript

         import { IAlarmAction } from '@aws-cdk/aws-cloudwatch';



   Interface for objects that can be the targets of CloudWatch alarm actions





   .. py:attribute:: alarmActionArn

      Return the ARN that should be used for a CloudWatch Alarm action



      :type: string *(readonly)*


IWidget (interface)
^^^^^^^^^^^^^^^^^^^

.. py:class:: IWidget

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.IWidget;

      .. code-tab:: javascript

         // IWidget is an interface

      .. code-tab:: typescript

         import { IWidget } from '@aws-cdk/aws-cloudwatch';



   A single dashboard widget





   .. py:attribute:: height

      The amount of vertical grid units the widget will take up



      :type: number *(readonly)*


   .. py:attribute:: width

      The amount of horizontal grid units the widget will take up



      :type: number *(readonly)*


   .. py:method:: position(x, y)

      Place the widget at a given position



      :param x: 
      :type x: number
      :param y: 
      :type y: number
      :abstract: Yes


   .. py:method:: toJson() -> any[]

      Return the widget JSON for use in the dashboard



      :rtype: any[]
      :abstract: Yes


Metric
^^^^^^

.. py:class:: Metric(props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.Metric;

      .. code-tab:: javascript

         const { Metric } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { Metric } from '@aws-cdk/aws-cloudwatch';



   A metric emitted by a service

   

   The metric is a combination of a metric identifier (namespace, name and dimensions)

   and an aggregation function (statistic, period and unit).

   

   It also contains metadata which is used only in graphs, such as color and label.

   It makes sense to embed this in here, so that compound constructs can attach

   that metadata to metrics they expose.

   

   This class does not represent a resource, so hence is not a construct. Instead,

   Metric is an abstraction that makes it easy to specify metrics for use in both

   alarms and graphs.



   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-cloudwatch.MetricProps`\ 

   .. py:staticmethod:: grantPutMetricData([identity])

      Grant permissions to the given identity to write metrics.



      :param identity: The IAM identity to give permissions to.
      :type identity: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  *(optional)*


   .. py:method:: dimensionsAsList() -> @aws-cdk/aws-cloudwatch.Dimension[]

      Return the dimensions of this Metric as a list of Dimension.



      :rtype: :py:class:`~@aws-cdk/aws-cloudwatch.Dimension`\ []


   .. py:method:: newAlarm(scope, id, props) -> @aws-cdk/aws-cloudwatch.Alarm

      Make a new Alarm for this metric

      

      Combines both properties that may adjust the metric (aggregation) as well

      as alarm properties.



      :param scope: 
      :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
      :param id: 
      :type id: string
      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-cloudwatch.MetricAarmProps`\ 
      :rtype: :py:class:`~@aws-cdk/aws-cloudwatch.Alarm`\ 


   .. py:method:: with(props) -> @aws-cdk/aws-cloudwatch.Metric

      Return a copy of Metric with properties changed.

      

      All properties except namespace and metricName can be changed.



      :param props: The set of properties to change.
      :type props: :py:class:`~@aws-cdk/aws-cloudwatch.MetricCustomization`\ 
      :rtype: :py:class:`~@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:attribute:: metricName

      :type: string *(readonly)*


   .. py:attribute:: namespace

      :type: string *(readonly)*


   .. py:attribute:: periodSec

      :type: number *(readonly)*


   .. py:attribute:: statistic

      :type: string *(readonly)*


   .. py:attribute:: color

      :type: string *(optional)* *(readonly)*


   .. py:attribute:: dimensions

      :type: string => any *(optional)* *(readonly)*


   .. py:attribute:: label

      :type: string *(optional)* *(readonly)*


   .. py:attribute:: unit

      :type: :py:class:`~@aws-cdk/aws-cloudwatch.Unit`\  *(optional)* *(readonly)*


MetricAarmProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: MetricAarmProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.MetricAarmProps;

      .. code-tab:: javascript

         // MetricAarmProps is an interface

      .. code-tab:: typescript

         import { MetricAarmProps } from '@aws-cdk/aws-cloudwatch';



   Properties needed to make an alarm from a metric





   .. py:attribute:: evaluationPeriods

      The number of periods over which data is compared to the specified threshold.



      :type: number


   .. py:attribute:: threshold

      The value against which the specified statistic is compared.



      :type: number


   .. py:attribute:: actionsEnabled

      Whether the actions for this alarm are enabled



      :type: boolean *(optional)*
      :default: true


   .. py:attribute:: alarmDescription

      Description for the alarm



      :type: string *(optional)*
      :default: No description


   .. py:attribute:: alarmName

      Name of the alarm



      :type: string *(optional)*
      :default: Automatically generated name


   .. py:attribute:: comparisonOperator

      Comparison to use to check if metric is breaching



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.ComparisonOperator`\  *(optional)*
      :default: GreaterThanOrEqualToThreshold


   .. py:attribute:: datapointsToAlarm

      The number of datapoints that must be breaching to trigger the alarm. This is used only if you are setting an "M

      out of N" alarm. In that case, this value is the M. For more information, see Evaluating an Alarm in the Amazon

      CloudWatch User Guide.



      :type: number *(optional)*
      :default: ``evaluationPeriods``


   .. py:attribute:: evaluateLowSampleCountPercentile

      Specifies whether to evaluate the data and potentially change the alarm state if there are too few data points to be statistically significant.

      

      Used only for alarms that are based on percentiles.



      :type: string *(optional)*


   .. py:attribute:: periodSec

      The period over which the specified statistic is applied.

      

      Specify time in seconds, in multiples of 60.



      :type: number *(optional)*
      :default: 300


   .. py:attribute:: statistic

      What function to use for aggregating.

      

      Can be one of the following:

      

      - "Minimum" | "min"

      - "Maximum" | "max"

      - "Average" | "avg"

      - "Sum" | "sum"

      - "SampleCount | "n"

      - "pNN.NN"



      :type: string *(optional)*
      :default: Average


   .. py:attribute:: treatMissingData

      Sets how this alarm is to handle missing data points.



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.TreatMissingData`\  *(optional)*
      :default: TreatMissingData.Missing


MetricCustomization (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: MetricCustomization

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.MetricCustomization;

      .. code-tab:: javascript

         // MetricCustomization is an interface

      .. code-tab:: typescript

         import { MetricCustomization } from '@aws-cdk/aws-cloudwatch';



   Properties of a metric that can be changed





   .. py:attribute:: color

      Color for this metric when added to a Graph in a Dashboard



      :type: string *(optional)*


   .. py:attribute:: dimensions

      Dimensions of the metric



      :type: string => any *(optional)*
      :default: No dimensions


   .. py:attribute:: label

      Label for this metric when added to a Graph in a Dashboard



      :type: string *(optional)*


   .. py:attribute:: periodSec

      The period over which the specified statistic is applied.

      

      Specify time in seconds, in multiples of 60.



      :type: number *(optional)*
      :default: 300


   .. py:attribute:: statistic

      What function to use for aggregating.

      

      Can be one of the following:

      

      - "Minimum" | "min"

      - "Maximum" | "max"

      - "Average" | "avg"

      - "Sum" | "sum"

      - "SampleCount | "n"

      - "pNN.NN"



      :type: string *(optional)*
      :default: Average


   .. py:attribute:: unit

      Unit for the metric that is associated with the alarm



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.Unit`\  *(optional)*


MetricProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: MetricProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.MetricProps;

      .. code-tab:: javascript

         // MetricProps is an interface

      .. code-tab:: typescript

         import { MetricProps } from '@aws-cdk/aws-cloudwatch';



   Properties for a metric





   .. py:attribute:: metricName

      Name of the metric.



      :type: string


   .. py:attribute:: namespace

      Namespace of the metric.



      :type: string


   .. py:attribute:: color

      Color for this metric when added to a Graph in a Dashboard



      :type: string *(optional)*


   .. py:attribute:: dimensions

      Dimensions of the metric



      :type: string => any *(optional)*
      :default: No dimensions


   .. py:attribute:: label

      Label for this metric when added to a Graph in a Dashboard



      :type: string *(optional)*


   .. py:attribute:: periodSec

      The period over which the specified statistic is applied.

      

      Specify time in seconds, in multiples of 60.



      :type: number *(optional)*
      :default: 300


   .. py:attribute:: statistic

      What function to use for aggregating.

      

      Can be one of the following (case insensitive)

      

      - "minimum" | "min"

      - "maximum" | "max"

      - "average" | "avg"

      - "sum"

      - "samplecount | "n"

      - "pNN.NN"



      :type: string *(optional)*
      :default: Average


   .. py:attribute:: unit

      Unit for the metric that is associated with the alarm



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.Unit`\  *(optional)*


MetricWidgetProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: MetricWidgetProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.MetricWidgetProps;

      .. code-tab:: javascript

         // MetricWidgetProps is an interface

      .. code-tab:: typescript

         import { MetricWidgetProps } from '@aws-cdk/aws-cloudwatch';



   Basic properties for widgets that display metrics





   .. py:attribute:: height

      Height of the widget



      :type: number *(optional)*
      :default: Depends on the type of widget


   .. py:attribute:: region

      The region the metrics of this graph should be taken from



      :type: string *(optional)*
      :default: Current region


   .. py:attribute:: title

      Title for the graph



      :type: string *(optional)*


   .. py:attribute:: width

      Width of the widget, in a grid of 24 units wide



      :type: number *(optional)*
      :default: 6


Row
^^^

.. py:class:: Row(*widgets)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.Row;

      .. code-tab:: javascript

         const { Row } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { Row } from '@aws-cdk/aws-cloudwatch';



   A widget that contains other widgets in a horizontal row

   

   Widgets will be laid out next to each other



   :implements: :py:class:`~@aws-cdk/aws-cloudwatch.IWidget`\ 
   :param \*widgets: 
   :type \*widgets: :py:class:`~@aws-cdk/aws-cloudwatch.IWidget`\ 

   .. py:method:: position(x, y)

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.position`

      Place the widget at a given position



      :param x: 
      :type x: number
      :param y: 
      :type y: number


   .. py:method:: toJson() -> any[]

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.toJson`

      Return the widget JSON for use in the dashboard



      :rtype: any[]


   .. py:attribute:: height

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.height`

      The amount of vertical grid units the widget will take up



      :type: number *(readonly)*


   .. py:attribute:: width

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.width`

      The amount of horizontal grid units the widget will take up



      :type: number *(readonly)*


Shading (enum)
^^^^^^^^^^^^^^

.. py:class:: Shading

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.Shading;

      .. code-tab:: javascript

         const { Shading } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { Shading } from '@aws-cdk/aws-cloudwatch';



   .. py:data:: None

   Don't add shading



   .. py:data:: Above

   Add shading above the annotation



   .. py:data:: Below

   Add shading below the annotation




SingleValueWidget
^^^^^^^^^^^^^^^^^

.. py:class:: SingleValueWidget(props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.SingleValueWidget;

      .. code-tab:: javascript

         const { SingleValueWidget } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { SingleValueWidget } from '@aws-cdk/aws-cloudwatch';



   A dashboard widget that displays the most recent value for every metric



   :extends: :py:class:`~@aws-cdk/aws-cloudwatch.ConcreteWidget`\ 
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-cloudwatch.SingleValueWidgetProps`\ 

   .. py:method:: toJson() -> any[]

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.ConcreteWidget.toJson`

      Return the widget JSON for use in the dashboard



      :rtype: any[]


   .. py:method:: position(x, y)

      *Inherited from* :py:meth:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.position>`

      Place the widget at a given position



      :param x: 
      :type x: number
      :param y: 
      :type y: number


   .. py:attribute:: height

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.height>`

      The amount of vertical grid units the widget will take up



      :type: number *(readonly)*


   .. py:attribute:: width

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.width>`

      The amount of horizontal grid units the widget will take up



      :type: number *(readonly)*


   .. py:attribute:: x

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.x>`

      *Protected property*

      :type: number *(optional)*


   .. py:attribute:: y

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.y>`

      *Protected property*

      :type: number *(optional)*


SingleValueWidgetProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SingleValueWidgetProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.SingleValueWidgetProps;

      .. code-tab:: javascript

         // SingleValueWidgetProps is an interface

      .. code-tab:: typescript

         import { SingleValueWidgetProps } from '@aws-cdk/aws-cloudwatch';



   Properties for a SingleValueWidget



   :extends: :py:class:`~@aws-cdk/aws-cloudwatch.MetricWidgetProps`\ 


   .. py:attribute:: metrics

      Metrics to display



      :type: :py:class:`~@aws-cdk/aws-cloudwatch.Metric`\ []


   .. py:attribute:: height

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricWidgetProps <@aws-cdk/aws-cloudwatch.MetricWidgetProps.height>`

      Height of the widget



      :type: number *(optional)*
      :default: Depends on the type of widget


   .. py:attribute:: region

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricWidgetProps <@aws-cdk/aws-cloudwatch.MetricWidgetProps.region>`

      The region the metrics of this graph should be taken from



      :type: string *(optional)*
      :default: Current region


   .. py:attribute:: title

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricWidgetProps <@aws-cdk/aws-cloudwatch.MetricWidgetProps.title>`

      Title for the graph



      :type: string *(optional)*


   .. py:attribute:: width

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.MetricWidgetProps <@aws-cdk/aws-cloudwatch.MetricWidgetProps.width>`

      Width of the widget, in a grid of 24 units wide



      :type: number *(optional)*
      :default: 6


Spacer
^^^^^^

.. py:class:: Spacer(props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.Spacer;

      .. code-tab:: javascript

         const { Spacer } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { Spacer } from '@aws-cdk/aws-cloudwatch';



   A widget that doesn't display anything but takes up space



   :implements: :py:class:`~@aws-cdk/aws-cloudwatch.IWidget`\ 
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-cloudwatch.SpacerProps`\ 

   .. py:method:: position(_x, _y)

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.position`

      Place the widget at a given position



      :param _x: 
      :type _x: number
      :param _y: 
      :type _y: number


   .. py:method:: toJson() -> any[]

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.toJson`

      Return the widget JSON for use in the dashboard



      :rtype: any[]


   .. py:attribute:: height

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.height`

      The amount of vertical grid units the widget will take up



      :type: number *(readonly)*


   .. py:attribute:: width

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IWidget.width`

      The amount of horizontal grid units the widget will take up



      :type: number *(readonly)*


SpacerProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SpacerProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.SpacerProps;

      .. code-tab:: javascript

         // SpacerProps is an interface

      .. code-tab:: typescript

         import { SpacerProps } from '@aws-cdk/aws-cloudwatch';



   Props of the spacer





   .. py:attribute:: height

      Height of the spacer



      :type: number *(optional)*
      :default: : 1


   .. py:attribute:: width

      Width of the spacer



      :type: number *(optional)*
      :default: 1


Statistic (enum)
^^^^^^^^^^^^^^^^

.. py:class:: Statistic

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.Statistic;

      .. code-tab:: javascript

         const { Statistic } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { Statistic } from '@aws-cdk/aws-cloudwatch';



   Statistic to use over the aggregation period



   .. py:data:: SampleCount

   .. py:data:: Average

   .. py:data:: Sum

   .. py:data:: Minimum

   .. py:data:: Maximum


TextWidget
^^^^^^^^^^

.. py:class:: TextWidget(props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.TextWidget;

      .. code-tab:: javascript

         const { TextWidget } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { TextWidget } from '@aws-cdk/aws-cloudwatch';



   A dashboard widget that displays MarkDown



   :extends: :py:class:`~@aws-cdk/aws-cloudwatch.ConcreteWidget`\ 
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-cloudwatch.TextWidgetProps`\ 

   .. py:method:: position(x, y)

      *Overrides* :py:meth:`@aws-cdk/aws-cloudwatch.ConcreteWidget.position`

      Place the widget at a given position



      :param x: 
      :type x: number
      :param y: 
      :type y: number


   .. py:method:: toJson() -> any[]

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.ConcreteWidget.toJson`

      Return the widget JSON for use in the dashboard



      :rtype: any[]


   .. py:attribute:: height

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.height>`

      The amount of vertical grid units the widget will take up



      :type: number *(readonly)*


   .. py:attribute:: width

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.width>`

      The amount of horizontal grid units the widget will take up



      :type: number *(readonly)*


   .. py:attribute:: x

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.x>`

      *Protected property*

      :type: number *(optional)*


   .. py:attribute:: y

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.ConcreteWidget <@aws-cdk/aws-cloudwatch.ConcreteWidget.y>`

      *Protected property*

      :type: number *(optional)*


TextWidgetProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TextWidgetProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.TextWidgetProps;

      .. code-tab:: javascript

         // TextWidgetProps is an interface

      .. code-tab:: typescript

         import { TextWidgetProps } from '@aws-cdk/aws-cloudwatch';



   Properties for a Text widget





   .. py:attribute:: markdown

      The text to display, in MarkDown format



      :type: string


   .. py:attribute:: height

      Height of the widget



      :type: number *(optional)*
      :default: 2


   .. py:attribute:: width

      Width of the widget, in a grid of 24 units wide



      :type: number *(optional)*
      :default: 6


TreatMissingData (enum)
^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TreatMissingData

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.TreatMissingData;

      .. code-tab:: javascript

         const { TreatMissingData } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { TreatMissingData } from '@aws-cdk/aws-cloudwatch';



   Specify how missing data points are treated during alarm evaluation



   .. py:data:: Breaching

   Missing data points are treated as breaching the threshold



   .. py:data:: NotBreaching

   Missing data points are treated as being within the threshold



   .. py:data:: Ignore

   The current alarm state is maintained



   .. py:data:: Missing

   The alarm does not consider missing data points when evaluating whether to change state




Unit (enum)
^^^^^^^^^^^

.. py:class:: Unit

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.Unit;

      .. code-tab:: javascript

         const { Unit } = require('@aws-cdk/aws-cloudwatch');

      .. code-tab:: typescript

         import { Unit } from '@aws-cdk/aws-cloudwatch';



   Unit for metric



   .. py:data:: Seconds

   .. py:data:: Microseconds

   .. py:data:: Milliseconds

   .. py:data:: Bytes_

   .. py:data:: Kilobytes

   .. py:data:: Megabytes

   .. py:data:: Gigabytes

   .. py:data:: Terabytes

   .. py:data:: Bits

   .. py:data:: Kilobits

   .. py:data:: Megabits

   .. py:data:: Gigabits

   .. py:data:: Terabits

   .. py:data:: Percent

   .. py:data:: Count

   .. py:data:: BytesPerSecond

   .. py:data:: KilobytesPerSecond

   .. py:data:: MegabytesPerSecond

   .. py:data:: GigabytesPerSecond

   .. py:data:: TerabytesPerSecond

   .. py:data:: BitsPerSecond

   .. py:data:: KilobitsPerSecond

   .. py:data:: MegabitsPerSecond

   .. py:data:: GigabitsPerSecond

   .. py:data:: TerabitsPerSecond

   .. py:data:: CountPerSecond

   .. py:data:: None


YAxisRange (interface)
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: YAxisRange

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.CloudWatch;

      .. code-tab:: java

         import software.amazon.awscdk.services.cloudwatch.YAxisRange;

      .. code-tab:: javascript

         // YAxisRange is an interface

      .. code-tab:: typescript

         import { YAxisRange } from '@aws-cdk/aws-cloudwatch';



   A minimum and maximum value for either the left or right Y axis





   .. py:attribute:: max

      The maximum value



      :type: number *(optional)*
      :default: Automatic


   .. py:attribute:: min

      The minimum value



      :type: number *(optional)*
      :default: Automatic


